--- a/style.css
+++ b/style.css
@@ -1,144 +1,145 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
 
 :root {
-    --Moderate-violet: hsl(263, 55%, 52%);
-    --Very-dark-grayish-blue: hsl(217, 19%, 35%);
-    --Very-dark-blackish-blue: hsl(219, 29%, 14%);
-    --White: hsl(0, 0%, 100%);
-    --Light-gray: hsl(0, 0%, 81%);
-    --Light-grayish-blue: hsl(210, 46%, 95%);
-
+  --Moderate-violet: hsl(263, 55%, 52%);
+  --Very-dark-grayish-blue: hsl(217, 19%, 35%);
+  --Very-dark-blackish-blue: hsl(219, 29%, 14%);
+  --White: hsl(0, 0%, 100%);
+  --Light-gray: hsl(0, 0%, 81%);
+  --Light-grayish-blue: hsl(210, 46%, 95%);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--Light-grayish-blue);
-    font-size: 13px;
-    font-family: 'Barlow Semi Condensed', sans-serif;
-    padding: 2rem 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  background-color: var(--Light-grayish-blue);
+  font-size: 13px;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  padding: 2rem 0;
 }
 .contianer {
-    max-width: 1120px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto auto;
-    place-items: center;
-    gap: 30px;
-    margin: 0 1.5rem;
-    
+  max-width: 1120px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto auto;
+  place-items: center;
+  gap: 30px;
+  margin: 0 1.5rem;
 }
 .violet {
-    background-image: url(./images/bg-pattern-quotation.svg);
-    background-repeat: no-repeat;
-    background-position: top right 15%;
-    background-color: var(--Moderate-violet);
-    grid-column: span 2;
-
+  background-image: url(./images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: top right 15%;
+  background-color: var(--Moderate-violet);
+  grid-column: span 2;
 }
 .dark-gray {
-    background-color: var(--Very-dark-grayish-blue);
-
+  background-color: var(--Very-dark-grayish-blue);
 }
- .white {
-    background-color: var(--White);
-
-} 
+.white {
+  background-color: var(--White);
+}
 .dark-blue {
-    background-color: var(--Very-dark-blackish-blue);
-    grid-column: span 2;
-
+  background-color: var(--Very-dark-blackish-blue);
+  grid-column: span 2;
 }
 .card {
-    border-radius: 10px;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    padding: 25px 35px;
-    box-shadow: 0px 15px 55px -39px rgba(0,0,0,0.55);
-    -webkit-box-shadow: 0px 15px 55px -39px rgba(0,0,0,0.55);
-    -moz-box-shadow: 0px 15px 55px -39px rgba(0,0,0,0.55);
-    min-width: 17rem;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding: 25px 35px;
+  box-shadow: 0px 15px 55px -39px rgba(0, 0, 0, 0.55);
+  -webkit-box-shadow: 0px 15px 55px -39px rgba(0, 0, 0, 0.55);
+  -moz-box-shadow: 0px 15px 55px -39px rgba(0, 0, 0, 0.55);
+  min-width: 17rem;
 }
 .jean {
-    grid-row: 2;
+  grid-row: 2;
 }
 .kira {
-    grid-row: span 2;
+  grid-row: span 2;
 }
 .img-div {
-    display: flex;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 .profile-img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 .violet-border {
-    border: 1px solid violet;
+  border: 1px solid violet;
 }
 .white-text {
-    color: white;
+  color: white;
 }
 .account-name {
-    margin-bottom: 2px;
+  margin-bottom: 2px;
 }
 .img-div {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .bold {
-    font-size: 150%;
-    margin-bottom: 20px;
-    font-weight: 600;
+  font-size: 150%;
+  margin-bottom: 20px;
+  font-weight: 600;
 }
 .account-status {
-    color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 .normal {
-    color: rgba(255, 255, 255, 0.7);
-    line-height: 20px;
-
-
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 20px;
 }
-.kira .account-status, .jean .account-status {
-    color: #757575;
+.kira .account-status,
+.jean .account-status {
+  color: #757575;
 }
-.kira .normal, .jean .normal {
-    color: #757575;
+.kira .normal,
+.jean .normal {
+  color: #757575;
+}
+.attribution {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 @media screen and (max-width: 810px) {
-    .contianer {
-        margin: 4.5rem 1.5rem;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-    }
-   
-    .violet {
-        order: 1;
+  .contianer {
+    margin: 4.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
 
-    }
-    .dark-gray {
-        order: 2;
-    }
-    .jean {
-        order: 3;
-    }
-    .dark-blue {
-        order: 4;
-    }
-    .kira {
-        order: 5;
-    }
+  .violet {
+    order: 1;
+  }
+  .dark-gray {
+    order: 2;
+  }
+  .jean {
+    order: 3;
+  }
+  .dark-blue {
+    order: 4;
+  }
+  .kira {
+    order: 5;
+  }
 }
